[package]
name = "maestro-esplora-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
http-body-util = "0.1"
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
